spacing issues for resize

--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ html {
 }
 
 body {
-    background: #054d86;
+    /* background: #054d86; */
     min-height: 100vh;
     overflow-x: hidden;
 }
@@ -67,14 +67,17 @@ header {
 #about{
     position: relative;
     top: -15vh;
+    width: 70%;
 }
 
 #about-content{
+    justify-content: space-around;
     position:relative;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    padding: 40px
+    padding: 40px;
+    width: 100%;
 }
 
 #name {
@@ -84,23 +87,30 @@ header {
     color: #333;
 }
 
+#portrait-wrapper {
+    width: 30%;
+}
+
 #portrait {
     position: relative;
-    width: 25rem;
+    width: 100%;
     height: auto;
-    border-radius: 250px;
+    border-radius: 50%;
     border-color:#c1e5fb;
     border-width: 5px;
 }
 
 #about-wrapper {
     position: relative;
-    padding: 1vw;
+    width: 50%;
+    align-self: center;
 }
 
 .intro {
     max-width: 30em;
-    font-size: 18px;
+    /* font-size: 18px; */
+    font-size: 1.5em;
+    
 }
 
 #links {
@@ -114,12 +124,12 @@ header {
    text-decoration: none;
 }
 
-.parallax img {
+.parallax-img {
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 101%;
+    max-width: 100%;
+    min-height: 101%;
     pointer-events: none;
     object-fit: cover;
 }
@@ -130,7 +140,7 @@ header {
     min-height: 95vh;
     position: absolute;
     background: #054d86;
-    padding: 100px;
+    /* padding: 100px; */
 }
 
 
@@ -139,7 +149,6 @@ header {
     text-align: center;
     font-size: 4.5em;
     position: relative;
-    top: -1.5em;
 }
 
 #projects-top-row {
